# advika_robot_ws

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COPILOT_AUDIT_PROMPT.md  LICENSE  NEW_CHAT_PROMPT.md  README.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml
config/: opencode_config.json  robot_params.yaml
docs/: CAD_README.md  FINAL_AUDIT_REPORT.md  LED_STATUS.md  REAL_WORLD_LAUNCH.md  Wiring_README.md
firmware/esp32_motor_bridge/: platformio.ini
firmware/esp32_motor_bridge/src/: main.cpp  safety_interrupt.h
manuals/i_am_5/: README.md  cover.md  fun_commands.md  meet_advika.md  safety_rules.md  sticker_sheet.md
mcp_servers/: __init__.py  hardware_bridge.py  vision_bridge.py
scripts/: launch_robot.sh  test_peripherals.py
simulation/config/: advika_sim.rviz  nav2_params.yaml  slam_params.yaml
simulation/docs/: SIMULATION_GUIDE.md
simulation/gazebo_worlds/: advika_playground.world
simulation/hitl/: __init__.py  hitl_bridge.py
simulation/hitl/web_interface/static/: style.css
simulation/hitl/web_interface/templates/: dashboard.html
simulation/launch/: sim_bringup.launch.py  sim_bringup.launch.py.backup
simulation/scripts/: run_scenario.py  safety_monitor.py  sim_mcp_bridge.py
simulation/urdf/: advika.urdf
src/advika_bringup/: package.xml  setup.py
src/advika_cad/: advika30_cad.py  package.xml  setup.py
src/advika_description/: package.xml  setup.py
src/advika_description/urdf/: advika.urdf  advika.urdf.backup
src/advika_hardware/: package.xml  setup.py
src/advika_msgs/: CMakeLists.txt  package.xml
src/advika_msgs/msg/: DriveCommand.msg  IMUData.msg
src/advika_navigation/: package.xml  setup.py
src/advika_navigation/launch/: nav2.launch.py  slam.launch.py
src/advika_sensors/: package.xml  setup.py
src/advika_sim/: package.xml  setup.py
src/advika_sim/launch/: sim_bringup.launch.py  sim_bringup.launch.py.full
src/advika_viz/: package.xml  setup.py
