<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>advika_bringup</name>
  <version>0.1.0</version>
  <description>Advika 3.0 — Top-level bringup launch files and robot startup configuration.</description>
  <maintainer email="abhishek@advika.local">Abhishek</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <export><build_type>ament_python</build_type></export>
</package>
