<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>advika_description</name>
  <version>0.1.0</version>
  <description>Advika 3.0 — Robot URDF/xacro description, meshes, and display launch.</description>
  <maintainer email="abhishek@advika.local">Abhishek</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <export><build_type>ament_python</build_type></export>
</package>
