<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>advika_hardware</name>
  <version>0.1.0</version>
  <description>Advika 3.0 — ESP32 bridge node, motor drivers, sensor publisher nodes.</description>
  <maintainer email="abhishek@advika.local">Abhishek</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
