<?xml version="1.0"?>
<package format="3">
  <name>advika_msgs</name>
  <version>0.1.0</version>
  <description>Advika 3.0 — Custom ROS2 message, service, and action definitions.</description>
  <maintainer email="abhishek@advika.local">Abhishek</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
