<?xml version="1.0"?>
<package format="3">
  <name>advika_navigation</name>
  <version>0.1.0</version>
  <description>Advika 3.0 — Nav2 configs, SLAM, AMCL, and autonomous navigation.</description>
  <maintainer email="abhishek@advika.local">Abhishek</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <export><build_type>ament_python</build_type></export>
</package>
