<?xml version="1.0"?>
<package format="3">
  <name>advika_sensors</name>
  <version>0.1.0</version>
  <description>Advika 3.0 — LD06 LiDAR, VL53L5CX ToF, BNO055 IMU, and dual-camera ROS2 driver nodes.</description>
  <maintainer email="abhishek@advika.local">Abhishek</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
